Prevent columns from bleeding out.

--- a/assets/css/7.utilities/1.as-forms/as-grid.css
+++ b/assets/css/7.utilities/1.as-forms/as-grid.css
@@ -4,7 +4,7 @@
 		--GutterWidth: var(--SpacingRow);
 
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(var(--ColumnWidth), 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(min(var(--ColumnWidth), 100%), 1fr));
 		align-items: baseline;
 
 		gap: var(--GutterWidth);
@@ -14,7 +14,7 @@
 		}
 
 		&:is(ul), &:has(>blockquote) {
-			grid-template-columns: repeat(auto-fill, minmax(var(--ColumnWidth), 1fr));
+			grid-template-columns: repeat(auto-fill, minmax(min(var(--ColumnWidth), 100%), 1fr));
 		}
 	}
 }
